:lipstick: style: desktop done

--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -1,11 +1,13 @@
 <footer class="bg-clr-medium">
     <div class="inner bg-clr-medium">
-        <div class="container">
+        <div class="container row">
             <div class="left">
                 <div class="row">
                     <div>Deja Vu Salon</div>
-                    <a href=""></a>
-                    <a href=""></a>
+                    <div class="social">
+                        <a href="https://www.facebook.com/dejavumindensalon/" target="_blank">{% include svg-facebook-dark.html %}</a>
+                        <a href="https://www.yelp.com/biz/deja-vu-salon-minden?osq=deja+vu" target="_blank">{% include svg-yelp-dark.html %}</a>
+                    </div>
                 </div>
                 <div>© 2018 Deja Vu Full Service Salon</div>
             </div>
