--- a/src/styles/components/core/_Footer.scss
+++ b/src/styles/components/core/_Footer.scss
@@ -1,3 +1,46 @@
 footer {
-  
+  .container {
+    justify-content: space-between;
+    
+    .left {
+      .row {
+        padding-bottom: $Base / 4;
+
+        div {
+          font-size: 2rem;
+          font-weight: 700;
+          margin-right: $Base / 2;
+          text-transform: uppercase;           
+        }
+
+        a {
+          margin-left: $Base / 16;
+        }
+      }
+
+      div {
+        font-size: 0.7rem;
+      }
+    }
+
+    .right {
+      text-align: right;
+
+      a {
+        color: $ClrDark;
+        font-size: 1.5rem;
+
+        &:visited {
+          color: $ClrDark;
+        }
+      }
+
+      .row {
+        a {
+          font-size: 1rem;
+          padding: $Base / 4 0 0 $Base / 2;
+        }
+      }
+    }
+  }
 }
