--- a/src/styles/components/core/_Footer.scss
+++ b/src/styles/components/core/_Footer.scss
@@ -1,16 +1,38 @@
 footer {
   .container {
     justify-content: space-between;
+    @media (max-width: $BaseMediaMd){
+      display: block;
+    }
     
     .left {
       .row {
         padding-bottom: $Base / 4;
+        @media (max-width: $BaseMediaMd){
+          display: flex;   
+          justify-content: center;
+
+          * {
+            display: inline-block;
+          }
+        }
+        @media (max-width: $BaseMediaSm){
+          display: block;
+          text-align: center;
+        }
 
         div {
           font-size: 2rem;
           font-weight: 700;
           margin-right: $Base / 2;
-          text-transform: uppercase;           
+          text-transform: uppercase; 
+          @media (max-width: $BaseMediaSm){
+            margin-right: 0;
+          }
+
+          &:last-of-type {
+            margin-right: 0;
+          }
         }
 
         a {
@@ -20,11 +42,17 @@ footer {
 
       div {
         font-size: 0.7rem;
+        @media (max-width: $BaseMediaMd){
+          display: none;
+        }
       }
     }
 
     .right {
       text-align: right;
+      @media (max-width: $BaseMediaMd){
+        text-align: center;
+      }
 
       a {
         color: $ClrDark;
@@ -36,9 +64,16 @@ footer {
       }
 
       .row {
+        @media (max-width: $BaseMediaMd){
+          justify-content: center;
+        }
+
         a {
           font-size: 1rem;
           padding: $Base / 4 0 0 $Base / 2;
+          @media (max-width: $BaseMediaMd){
+            padding: $Base / 4 $Base / 4;
+          }
         }
       }
     }
