--- a/src/styles/global/_Typography.scss
+++ b/src/styles/global/_Typography.scss
@@ -53,10 +53,10 @@ h1,
   font-weight: 700;
   line-height: 0.8;
   @media (max-width: $BaseMediaMd){
-    font-size: 4.286rem;
+    font-size: 6rem;
   }
   @media (max-width: $BaseMediaSm){
-    font-size: 3.571rem;
+    font-size: 15vw;
   }
 }
 
@@ -66,16 +66,22 @@ h2,
   margin-bottom: $Base;
   padding-bottom: $Base / 8;
   @media (max-width: $BaseMediaMd){
-    font-size: 3.714rem;
+    font-size: 2.5rem;
   }
   @media (max-width: $BaseMediaSm){
-    font-size: 3.143rem;
+    font-size: 2rem;
   }
 }
 
 h3, .h3 {
   font-size: 2.25rem;
   font-weight: 400;
+  @media (max-width: $BaseMediaMd){
+    font-size: 2rem;
+  }
+  @media (max-width: $BaseMediaSm){
+    font-size: 1.5rem;
+  }
 }
 
 h4, .h4 {
@@ -83,6 +89,9 @@ h4, .h4 {
   font-weight: 400;
   padding: $Base / 4 0;
   text-transform: none;
+  @media (max-width: $BaseMediaMd){
+    font-size: 1.25rem;
+  }
 }
 
 // #####################################
