:rocket: deploying: nav js and tab js adjustments for mobile, discalimer on mobile and favicon

--- a/src/styles/components/core/_Footer.scss
+++ b/src/styles/components/core/_Footer.scss
@@ -76,6 +76,15 @@ footer {
           }
         }
       }
+
+      .desktop-hide {
+        display: none;
+        font-size: 0.7rem;
+        margin-top: $Base;
+        @media (max-width: $BaseMediaMd){
+          display: block;
+        }
+      }
     }
   }
 }
