--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -18,6 +18,7 @@
                     <a href="/#about">About</a>
                     <a href="/#location">Location</a>
                 </div>
+                <div class="desktop-hide">© 2018 Deja Vu Full Service Salon</div>
             </div>
         </div>
     </div>
