--- a/src/styles/structure/_Section.scss
+++ b/src/styles/structure/_Section.scss
@@ -1,6 +1,4 @@
-
-
-
+// GENERAL SECTION STYLES
 section, footer, header {
   overflow: hidden;
   padding: 0 $Base / 2;
@@ -107,7 +105,7 @@ section, footer, header {
 }
 
 
-
+// PRODUCTS SECTION
 #products {
   .row {
     align-items: flex-end;
@@ -142,6 +140,8 @@ section, footer, header {
   }
 }
 
+
+// LOCATION SECTION
 #location {
   .row {
     @media (max-width: $BaseMediaSm){
@@ -180,6 +180,8 @@ section, footer, header {
   }
 }
 
+
+// HERO SECTION
 #hero {
   height: 100vh;
   max-height: 1400px;
@@ -318,117 +320,7 @@ section, footer, header {
 }
 
 
-header {
-  background-color: transparent;
-  position: fixed;
-  z-index: 999;
-
-  *:not(.btn) {
-    background-color: transparent;
-  }
-
-  .inner {
-    padding-bottom: 0;
-    padding-top: $Base / 2;
-    transition: background-color $BaseTransition ease;
-    @media (max-width: $BaseMediaSm){
-      padding-top: $Base / 4;
-    }
-
-    &.dark-nav {
-      background-color: $ClrWhite;
-
-      .container nav a {
-        color: $ClrDark;
-
-        &:visited {
-          color: $ClrDark;
-        }
-      }
-
-      .container .btn {
-        background-color: $ClrDark;
-        color: $ClrWhite !important;
-
-        &:hover {
-          background-color: rgba($ClrDark, 0.9) !important; 
-        }
-
-        &:visited {
-          color: $ClrWhite !important;
-        }
-      }
-
-      .btn {
-        @media (max-width: $BaseMediaSm){
-          background-color: transparent !important;
-
-          svg, path, g {
-            fill: $ClrDark;
-          }
-        }
-      }
-    }
-
-    .container {
-      justify-content: space-between;
-      max-width: 100%;
-      padding: 0;
-
-      nav {
-        padding-left: $Base / 3;
-        @media (max-width: $BaseMediaSm){
-          padding-left: 0;
-        }
-
-        a {
-          color: $ClrWhite;
-          display: inline-block;
-          font-size: 1rem;
-          font-weight: 500;
-          padding: $Base / 5 $Base / 2;
-          transition: color $BaseTransition ease;
-          @media (max-width: $BaseMediaSm){
-            font-size: 0.9rem;
-            padding: $Base / 5 $Base / 3;
-          }
-
-          &:visited {
-            color: $ClrWhite;
-          }
-        }
-      }
-
-      .btn {
-        @media (max-width: $BaseMediaSm){
-          background-color: transparent;
-          margin-right: $Base / 4;
-          max-width: $Base / 3;
-          padding: 0;
-          width: $Base / 3;
-
-          &:hover {
-            background-color: transparent !important;
-          }
-
-          span {
-            display: none;
-          }
-        }
-
-
-        svg {
-          display: none;
-          @media (max-width: $BaseMediaSm){
-            display: block;
-          }
-        }
-      }
-    }
-  }
-}
-
-
+// SERVICES SECTION
 #services {
   h2 {
     margin-bottom: 0;
