--- a/src/styles/structure/_Section.scss
+++ b/src/styles/structure/_Section.scss
@@ -191,6 +191,7 @@ section, footer, header {
   }
 
   .inner {
+    background-color: $ClrDark !important;
     height: 100%;
     padding-bottom: 0;
     padding-top: 0;
