:rocket: deloying: remove http, change call hover on mobile and change about h2 bar to horizontal on mobile

--- a/src/styles/components/core/_Navigation.scss
+++ b/src/styles/components/core/_Navigation.scss
@@ -32,6 +32,9 @@ header {
 
         &:hover {
           background-color: rgba($ClrDark, 0.9) !important; 
+          @media (max-width: $BaseMediaSm){
+            background-color: transparent !important; 
+          }
         }
 
         &:visited {
