--- a/src/styles/structure/_SiteWrapper.scss
+++ b/src/styles/structure/_SiteWrapper.scss
@@ -5,7 +5,7 @@ body {
   @include fadein(0.5s);
 
   main {
-    background-color: $ClrMedium;
+    background-color: $ClrLt;
     width: 100%;
   }
 }
