--- a/src/styles/global/_Typography.scss
+++ b/src/styles/global/_Typography.scss
@@ -1,8 +1,8 @@
 // typography
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Barlow:100,200,300,400,400i,500,500i,600,700,800,900&display=swap');
 
-$Fnt: 'Montserrat', 'Roboto', 'Helvetica', sans-serif;
+$Fnt: 'Barlow', 'Roboto', 'Helvetica', sans-serif;
 $FntBaseSize: 16px;
 
 body,
@@ -40,33 +40,28 @@ h6,
 .h5,
 .h6 {
   font-family: $Fnt;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 0;
   margin: 0;
   padding: 0;
-  text-transform: uppercase;
 }
 
 h1,
 .h1 {
-  font-size: 8.125rem;
-  font-weight: 700;
-  line-height: 0.8;
+  font-size: 7.25rem;
   @media (max-width: $BaseMediaMd){
-    font-size: 6rem;
+    // font-size: 6rem;
   }
   @media (max-width: $BaseMediaSm){
-    font-size: 15vw;
+    // font-size: 15vw;
   }
 }
 
 h2,
 .h2 {
-  font-size: 3rem;
-  margin-bottom: $Base;
-  padding-bottom: $Base / 8;
+  font-size: 3.75rem;
   @media (max-width: $BaseMediaMd){
-    font-size: 2.5rem;
+    // font-size: 2.5rem;
   }
   @media (max-width: $BaseMediaSm){
     font-size: 2rem;
@@ -74,24 +69,37 @@ h2,
 }
 
 h3, .h3 {
-  font-size: 2.25rem;
-  font-weight: 400;
+  font-size: 3rem;
   @media (max-width: $BaseMediaMd){
-    font-size: 2rem;
+    //  font-size: 2rem;
   }
   @media (max-width: $BaseMediaSm){
-    font-size: 1.5rem;
+    //  font-size: 1.5rem;
   }
 }
 
 h4, .h4 {
-  font-size: 1.5rem;
-  font-weight: 400;
-  padding: $Base / 4 0;
+  font-size: 2rem;
   @media (max-width: $BaseMediaMd){
-    font-size: 1.25rem;
+    //  font-size: 1.25rem;
   }
 }
+
+h5, .h5 {
+  font-size: 1rem;
+  @media (max-width: $BaseMediaMd){
+    //  font-size: 1.25rem;
+  }
+}
+
+h6, .h6 {
+  font-size: 1rem;
+  @media (max-width: $BaseMediaMd){
+    //  font-size: 1.25rem;
+  }
+}
+
+
 
 // #####################################
 // body copy
@@ -100,7 +108,6 @@ h4, .h4 {
 p,
 .p {
   font-family: $Fnt;
-  font-size: 1.1875rem;
-  line-height: 1.47;
-  padding-bottom: $Base / 2;
+  font-size: 1rem;
+  padding-top: $Base / 4;
 }
