--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,3 +18,6 @@
 @import 'components/core/Navigation';
 @import 'components/core/Footer';
 @import 'components/core/Button';
+@import 'components/core/HorizontalList';
+@import 'components/core/CenterText';
+@import 'components/core/_TextWithImageBlock.scss';
